--- a/views/domain.pug
+++ b/views/domain.pug
@@ -78,7 +78,7 @@ block content
         section.row.mt4.mb6
           .col-sm-12
             h3 Frequently Asked Questions
-            .js-faq-accordion.panel-group(role="tablist" aria-multiselectable="true")
+            .panel-group(role="tablist" aria-multiselectable="true")
               .panel.panel-default
                 +accordion-header('domain-why')
                   | Do I need a domain?
