--- a/views/hosting.pug
+++ b/views/hosting.pug
@@ -327,7 +327,7 @@ block content
         section.row.mt4
           .col-sm-12
             h3 Frequently Asked Questions
-            .js-faq-accordion.panel-group(role="tablist" aria-multiselectable="true")
+            .panel-group(role="tablist" aria-multiselectable="true")
               .panel.panel-default
                 +accordion-header('hosting-why')
                   | Why do I need hosting?
