--- a/views/cdn.pug
+++ b/views/cdn.pug
@@ -87,6 +87,6 @@ block content
                             +cloudflare-signup
           .row.mt6
             .col-sm-12
-              h3 What benefits you get from using a CDN?
-              p Most common benefit is the speed improvement - content of your website is distributed in different Points of Presence around the world. Each time someone visits your website, the CDN will deliver the files from the closest location, making you website load faster. Also, using a CDN can save you some bandwith (as the large files will no longer be served from your servers).
-              p Having a CDN can help you with DDoS attacks (Distributed Denial-of-Service). Instead of all the traffic coming to your servers and killing them almost instantly - unless you are prepared for traffic spikes 1000x bigger than the average (in which case, you are probably terribly overpaying for the hosting most of the time :) ), those companies have specialized solutions for defending against a DDoS (a lot more traffic is needed to take them down).
+              h3 Why should I use a CDN?
+              p Most common benefit is the speed improvement - content of your website is distributed in different Points of Presence around the world. Each time someone visits your website, the CDN will deliver the files from the closest location, making you website load faster. Also, using a CDN can save you some bandwith, as the large files will no longer be served from your servers.
+              p Having a CDN can help you in case of a DDoS attack (Distributed Denial-of-Service). Instead of all the traffic coming to your servers and killing them almost instantly - unless you are prepared for traffic spikes 1000x bigger than the average (in which case, you are probably terribly overpaying for the hosting most of the time :) ), those companies have specialized solutions for defending against a DDoS (a lot more traffic is needed to take them down).
