--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -180,6 +180,7 @@ p {
 // Pricing tables are not equal, but we can create a dummy fillers that will
 // take enough vertical space that we don't need to specify heights on the cards
 .li-filler16 { height: 16px; }
+.li-filler21 { height: 21px; }
 .li-filler25 { height: 25px; }
 .li-filler38 { height: 38px; }
 .li-filler46 { height: 46px; } // Standard height of a li with 1 line of text
