Added newsletter back

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -337,3 +337,8 @@ p {
     margin-left: -120px;
   }
 }
+
+.newsletter-text {
+  // Add margin to make the card size the same as other cards
+  margin-bottom: 64px;
+}
