--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -26,4 +26,4 @@ nav.navbar.navbar-transparent.navbar-fixed-top.navbar-color-on-scroll.navbar-inf
             li #[a(href="/static-websites") Static websites]
             li #[a(href="/cloud-computing") Cloud computing]
         li(class=(title == 'Contact') ? 'active' : null)
-          a(href='/contact') Contact
+          a(href='/contact') About &amp; Contact
