--- a/views/contact.pug
+++ b/views/contact.pug
@@ -22,7 +22,9 @@ block content
             p All the tools or services presented here are the ones that I would use (or I'm already using and I'm happy with them).
             h2.mt6.mb4.text-center Contact
             p All the code is available on #[a(href="https://github.com/switowski/deploystack" target="_blank") GitHub] and it's under the #[a(href="https://github.com/switowski" target="_blank") MIT License]. If you have any questions or comments, you can #[a(href="https://github.com/switowski/deploystack/issues" target="_blank") create an issue on GitHub], so other people can join the conversation. If you don't have a GitHub account, don't know how to create an issue or just don't think that it's something that has to be discussed publicly, just drop me an email:&nbsp;
-              span.email-address #[strong info](at)#[strong deploystack](dot)#[strong io].
+              strong.email-address info(at)deploystack(dot)io.
+            h2.mt6.mb4.text-center#advertisement Advertisement
+            p If you think that your website is a good fit for DeployStack and you would like to advertise it here, send an email to: #[strong.email-address ads(at)deploystack(dot)io] to get all the details.
       section.subscribe.background-inverse.background-inverse--blue.border-bottom-rounded.pb6
         .container.text-center
           .row
