Fixed some forgotten CSS

--- a/views/hosting.pug
+++ b/views/hosting.pug
@@ -314,7 +314,7 @@ block content
                             +digitalocean-signup
                       +pricing-card("Amazon")
                         ul
-                          li.u-light-grey.amazon-small-padding m4.2xlarge
+                          li.light-grey.amazon-small-padding m4.2xlarge
                           li 32 GB RAM
                           li 8 CPU
                           li
