Fixed 404 link to FAQ page

--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -6,8 +6,8 @@
         button.close(type="button", data-dismiss="modal", aria-hidden="true", aria-label="Close") &times;
         h4.navy-blue#amazon-free-label.modal-title.text-center Affiliate links
       .modal-body.text-center
-        p.navy-blue Affiliate links have a special code in the URL. If you register from this link, some companies will give free credits to either both of us or just to me (depending on how a company set up their affiliation program - I always ask if they have some coupon codes that will give credits to both sides). Those credits can be used on their website (for a few months of free hosting, a cheaper domain, etc.) or redeemed for money (only for domains providers).<br>
-          | Affiliation program doesn't affect whether a company is recommended or not. You can read more in the #[a(href="/faq#general") Do you get paid for including specific companies?] section of the FAQ.
+        p.navy-blue Affiliate links have a special code in the URL. If you register from this link, some companies will give free credits to either both of us or just to me (depending on how a company set up their affiliation program - I always ask if they have some coupon codes that will give credits to both sides). Those credits can be used on their website (for a few months of free hosting, a cheaper domain, etc.) or redeemed for money (only for domains providers).<br><br>
+          | Affiliation program doesn't affect whether a company is recommended or not. You can read more about how I select companies/tools on the #[a(href="/contact") About &amp; contact] page.
       .modal-footer
         button.btn.btn-default.btn-simple(type="button", data-dismiss="modal") Close
 
